[gd_scene load_steps=9 format=2]

[ext_resource path="res://Sprites/enemy-sprites/enemies/slimeBlue_blue.png" type="Texture" id=1]
[ext_resource path="res://Sprites/enemy-sprites/enemies/slimeBlue_squashed.png" type="Texture" id=2]
[ext_resource path="res://Sprites/enemy-sprites/enemies/slimeBlue.png" type="Texture" id=3]
[ext_resource path="res://Enemy/Enemy.gd" type="Script" id=4]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 1 ) ],
"loop": true,
"name": "Crawl",
"speed": 3.0
}, {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "Squashed",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 16, 11.5 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 20, 2.5 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 28, 8 )

[node name="Node2D" type="Node2D"]

[node name="Enemy" type="KinematicBody2D" parent="."]
position = Vector2( 307, 196 )
collision_layer = 2
script = ExtResource( 4 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="Enemy"]
frames = SubResource( 2 )
animation = "Crawl"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Enemy"]
position = Vector2( 0, 4.5 )
shape = SubResource( 1 )

[node name="floor_checker" type="RayCast2D" parent="Enemy"]
position = Vector2( 0, 1 )
enabled = true
cast_to = Vector2( 0, 20 )
collision_mask = 2

[node name="top_checker" type="Area2D" parent="Enemy"]
collision_layer = 9

[node name="CollisionShape2D" type="CollisionShape2D" parent="Enemy/top_checker"]
position = Vector2( 0, -12 )
shape = SubResource( 3 )

[node name="side_checker" type="Area2D" parent="Enemy"]
collision_layer = 9
collision_mask = 9

[node name="CollisionShape2D" type="CollisionShape2D" parent="Enemy/side_checker"]
position = Vector2( 1, 4 )
shape = SubResource( 4 )

[connection signal="body_entered" from="Enemy/top_checker" to="Enemy" method="_on_top_checker_body_entered"]
[connection signal="body_entered" from="Enemy/side_checker" to="Enemy" method="_on_side_checker_body_entered"]
